--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "main": "src/index.js",
   "dependencies": {
     "react": "16.3.2",
-    "react-bootstrap": "0.32.1",
     "react-dom": "16.3.2",
+    "react-marked": "^0.3.1",
     "react-router-dom": "4.2.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "semantic-ui-react": "^0.80.0"
   },
   "devDependencies": {},
   "scripts": {
