--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "marked": "^0.3.19",
     "react": "16.3.2",
     "react-dom": "16.3.2",
-    "react-marked": "^0.3.1",
     "react-router-dom": "4.2.2",
     "react-scripts": "1.1.4",
     "semantic-ui-react": "^0.80.0"
